# registest

./: README.md  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
doc/: compare_structure.txt  data.md  data_structure.txt  folder_structure.txt  module_description.md  step_to_test.md  terminal_usage_example.md  warnings.md
registest/: run_registest.py
registest/config/: default_metadata.json  default_params.json  metadata.py  parameters.py
registest/core/: data_manager.py  pipeline.py  run_args.py
registest/modules/: comparison.py  generator.py  registration.py  reporting.py  transformation.py
registest/utils/: io_utils.py  metrics.py  visualization.py
test/: test_data_manager.py  test_parameters.py  test_pipeline.py  test_run_args.py
test/DEPRECATED/: test_run_args.py
test/high_level/: test_run_args.py  test_script_names.py
