[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "registest"
version = "0.1.2"
description = "Registration testing Tool"
readme = "README.md"
authors = [{ name = "Xavier DEVOS", email = "xavier.devos@cbs.cnrs.fr" }]
license = { file = "LICENSE" }
keywords = ["tifffile", "scipy"]
dependencies = ["tifffile", "scipy", "tqdm", "scikit-image"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/XDevos/registest"

[project.scripts]
registest = "registest.run_registest:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"registest.config" = ["*.json"]
