[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "registest"
version = "0.1.2"
description = "Registration testing Tool"
readme = "README.md"
authors = [{ name = "Xavier DEVOS", email = "xavier.devos@cbs.cnrs.fr" }]
license = { file = "LICENSE" }
keywords = ["tifffile", "scipy"]
dependencies = ["tifffile", "scipy", "tqdm", "scikit-image", "pandas", "plotly", "reportlab"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/XDevos/registest"

[project.scripts]
registest = "registest.run_registest:main"
regis_transform = "registest.modules.transformation:main"
regis_register = "registest.modules.registration:main"
regis_compare = "registest.modules.comparison:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"registest.config" = ["*.json"]
